kube/flask-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    app: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: fabiopalazzii/kubernetes-sample:flask
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: regcred
