kube/flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: checkov-project
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      securityContext:
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: flask
          image: fabiopalazzii/kubernetes-sample:flask@sha256:ed43ccedd358c7290d1b84e4e87ac01555e957f7701704f58c34f05d79ddd103
          securityContext: 
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 30
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 3
          imagePullPolicy: Always
          resources:
            limits:
              memory: "400Mi"
              cpu: "0.4"
            requests:
              memory: "200Mi"
              cpu: "0.2"
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: regcred
