kube/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-lb
  namespace: checkov-project
spec:
  selector:
    app: flask
  ports:
    - port: 8080
      targetPort: 5000
  type: LoadBalancer
