kube/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  externalTrafficPolicy: "Local"
  selector:
    app: mongo
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: 27017
    nodePort: 32000
  type: NodePort
status:
  loadBalancer: {}
