kube/mysqldb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: checkov-project
  labels:
    delete: "true"
spec:
  externalTrafficPolicy: "Local"
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
    nodePort: 32500
  type: NodePort
status:
  loadBalancer: {}
