kube/network-mongo-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: checkov-project
spec:
  podSelector: {}
  ingress: []
